few changes to improve later in environments